start of work on fixing raids