@@ -1,13 +1,5 @@
 package pokecube.api.raids;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
-
 import net.minecraft.core.BlockPos;
 import net.minecraft.server.level.ServerBossEvent;
 import net.minecraft.server.level.ServerLevel;
@@ -24,13 +16,19 @@ import pokecube.api.moves.Battle;
 import pokecube.api.utils.TagNames;
 import pokecube.core.items.pokecubes.PokecubeManager;
 
+import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+
 public class RaidManager
 {
     public static int RAID_DURATION = 600;
 
     public static record RaidContext(@Nonnull ServerLevel level, @Nonnull BlockPos pos, @Nullable ServerPlayer player)
-    {
-    }
+    {}
 
     public static void init()
     {
@@ -46,8 +44,8 @@ public class RaidManager
             String key = event.pokemob.getEntity().getPersistentData().getString("pokecube:raid_boss");
             IBossProvider bossMaker = RAID_TYPES.get(key);
 
-            if (bossMaker != null
-                    && !event.pokemob.getEntity().getPersistentData().contains("pokecube:raid_boss_faint"))
+            if (bossMaker != null && !event.pokemob.getEntity().getPersistentData()
+                    .contains("pokecube:raid_boss_faint"))
             {
                 event.pokemob.getEntity().getPersistentData().putBoolean("pokecube:raid_boss_faint", true);
                 bossMaker.onBossFaint(event);
@@ -121,17 +119,12 @@ public class RaidManager
         }
     }
 
-    public static boolean makeRaid(@Nonnull ServerLevel level, @Nonnull BlockPos pos, @Nullable ServerPlayer player)
-    {
-        return makeRaid(level, pos, player, null);
-    }
-
     public static boolean makeRaid(@Nonnull ServerLevel level, @Nonnull BlockPos pos, @Nullable ServerPlayer player,
             @Nullable String key)
     {
         if (RAID_TYPES.isEmpty()) return false;
-        IBossProvider bossMaker = null;
-        if (key != null)
+        IBossProvider bossMaker;
+        if (key != null && RAID_TYPES.containsKey(key))
         {
             bossMaker = RAID_TYPES.get(key);
         }
@@ -139,7 +132,7 @@ public class RaidManager
         {
             List<IBossProvider> choices = new ArrayList<>(RAID_TYPES.values());
             if (choices.size() > 1) bossMaker = choices.get(level.getRandom().nextInt(choices.size()));
-            else bossMaker = choices.get(0);
+            else bossMaker = choices.getFirst();
         }
         if (bossMaker == null) return false;
         RaidContext context = new RaidContext(level, pos, player);
